# cryptohopper-rust-sdk

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: Authentication.md  Error-Handling.md  Getting-Started.md  Rate-Limits.md
src/: client.rs  error.rs  lib.rs
src/resources/: ai.rs  app.rs  arbitrage.rs  backtest.rs  chart.rs  exchange.rs  hoppers.rs  market.rs  marketmaker.rs  mod.rs  platform.rs  signals.rs  social.rs  strategy.rs  subscription.rs  template.rs  tournaments.rs  user.rs  webhooks.rs
tests/: client_tests.rs  resources_tests.rs
